--- a/src/pages/Home/homePage.css
+++ b/src/pages/Home/homePage.css
@@ -3,3 +3,9 @@
   flex: 1;
   justify-content: space-between;
 }
+
+@media only screen and (max-width: 760px) {
+  .hp01Container {
+    flex-direction: column;
+  }
+}
