Add grid for the game

--- a/src/components/GameSection/gameSection.css
+++ b/src/components/GameSection/gameSection.css
@@ -2,3 +2,9 @@
   color: var(--groww-green);
   font-size: 42px;
 }
+
+.gsec01Container {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
