--- a/src/components/GameSection/GameButtons/gameButtons.css
+++ b/src/components/GameSection/GameButtons/gameButtons.css
@@ -1,6 +1,8 @@
 .gbs01Container {
   display: flex;
   justify-content: space-around;
+  flex: 1;
+  width: 100%;
 }
 .gbs01Icon {
   display: flex;
@@ -12,6 +14,8 @@
   width: 60px;
   height: 60px;
   border-radius: 50%;
+  background-color: transparent;
+  cursor: pointer;
 }
 .gbs10MuteIcon {
   opacity: 0.5;
