Add player form

--- a/src/components/GameSection/gameSection.css
+++ b/src/components/GameSection/gameSection.css
@@ -8,3 +8,9 @@
   flex-direction: column;
   align-items: center;
 }
+
+@media only screen and (max-width: 760px) {
+  .gsec01Container {
+    order: -1;
+  }
+}
