--- a/src/constants/theme/variables.css
+++ b/src/constants/theme/variables.css
@@ -3,4 +3,6 @@
   --heading-text: #fff4f7;
   --groww-green: #00d09c;
   --secondary-heading: #f4e8ed;
+  --groww-secondary: #5367ff;
+  --groww-secondary-light: #98a4ff;
 }
