--- a/src/components/GameSection/GameButtons/gameButtons.css
+++ b/src/components/GameSection/GameButtons/gameButtons.css
@@ -8,9 +8,9 @@
   display: flex;
   align-items: center;
   justify-content: center;
-  color: white;
+  color: var(--groww-green);
   font-size: 32px;
-  border: 1px solid white;
+  border: 1px solid var(--groww-green);
   width: 60px;
   height: 60px;
   border-radius: 50%;
