--- a/src/components/GameSection/GameGrid/square.css
+++ b/src/components/GameSection/GameGrid/square.css
@@ -1,5 +1,6 @@
 .square {
-  border: 6px solid #2c3e50;
+  border: 6px solid var(--groww-secondary);
+  background-color: var(--groww-secondary-light);
   border-radius: 2px;
   font-family: Helvetica;
   font-weight: bold;
@@ -7,7 +8,6 @@
   display: flex;
   justify-content: center;
   align-items: center;
-  background-color: #34495e;
 }
 
 .square_o {
