--- a/src/components/Leaderboard/Table/table.css
+++ b/src/components/Leaderboard/Table/table.css
@@ -1,9 +1,8 @@
 .tbl01Container {
-  height: 500px;
-
   background-color: #eef0ff;
   margin-top: 22px;
   border-radius: 8px;
   max-width: 360px;
+  min-width: 280px;
   width: 100%;
 }
