--- a/src/components/GameSection/GameGrid/GameForm/gameForm.css
+++ b/src/components/GameSection/GameGrid/GameForm/gameForm.css
@@ -31,10 +31,11 @@
   padding: 8px 24px;
   letter-spacing: 1.2px;
   text-transform: uppercase;
-  background-color: var(--groww-green);
+  background-color: var(--groww-secondary);
   border: none;
   border-radius: 8px;
   cursor: pointer;
+  color: white;
 }
 
 @media only screen and (max-width: 768px) {
