--- a/src/constants/theme/variables.css
+++ b/src/constants/theme/variables.css
@@ -6,4 +6,6 @@
   --groww-secondary: #5367ff;
   --groww-secondary-light: #98a4ff;
   --table-bg: #eef0ff;
+  --subtext: #7c7e8c;
+  --text-color: #44475b;
 }
