--- a/src/index.css
+++ b/src/index.css
@@ -10,6 +10,9 @@ body {
   min-width: 100vw;
   box-sizing: border-box;
 }
+button {
+  font-family: "Luckiest Guy", cursive;
+}
 
 code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, "Courier New",
