--- a/src/components/Leaderboard/Table/table.css
+++ b/src/components/Leaderboard/Table/table.css
@@ -2,8 +2,6 @@
   background-color: #eef0ff;
   margin-top: 22px;
   border-radius: 8px;
-  max-width: 360px;
-  min-width: 280px;
-  width: 100%;
+  width: 280px;
   min-height: 500px;
 }
