--- a/src/components/Rules/rules.css
+++ b/src/components/Rules/rules.css
@@ -1,3 +1,9 @@
+.rul01Container {
+  display: flex;
+  justify-content: center;
+  flex-direction: column;
+  align-items: center;
+}
 .rul01Title {
   color: var(--groww-secondary);
   font-size: 30px;
